添加了LomBok,注解的测试类

--- a/girl/pom.xml
+++ b/girl/pom.xml
@@ -56,6 +56,26 @@
            <artifactId>springfox-swagger-ui</artifactId>
            <version>2.2.2</version>
         </dependency>
+        
+        
+    
+   
+     
+    <!-- 内存数据库h2-->   
+    <dependency>   
+        <groupId>com.h2database</groupId>   
+        <artifactId>h2</artifactId>  
+         <scope>runtime</scope>  
+    </dependency> 
+    <!-- 集成Lombok -->
+     	<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+			<dependency>
+			    <groupId>org.projectlombok</groupId>
+			    <artifactId>lombok</artifactId>
+			    <version>1.16.18</version>
+			    <scope>provided</scope>
+			</dependency>
+
 
     </dependencies>
 
